# yobicon_description

./: CMakeLists.txt  README.md  package.xml
launch/: display.launch
meshes/: ArmLeft.stl  ArmRight.stl  BodyLeft.stl  BodyRight.stl  BootsLeft.stl  BootsRight.stl  Face.stl  HairBack.stl  HairFront.stl  KemonomimiLeft.stl  KemonomimiRight.stl  LegLeft.stl  LegRight.stl  SG92R_horn_X.stl  SG92R_horn_i.stl  SG92R_servo.stl
urdf/: yobicon.gv  yobicon.urdf
