<?xml version="1.0"?>
<package>
  <name>yobicon_description</name>
  <version>0.0.1</version>
  <description>The yobicon_description package</description>

  <maintainer email="nomumu-github@koso2-dan.ddo.jp">nomumu</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
